# starknet-contract-verifier

./: .gitignore  .gitmodules  .tool-versions  CODEOWNERS  Cargo.toml  Dockerfile  HOW.org  HOW_IT_WORKS.md  IMPROVEMENT_PLAN.md  LICENSE  Makefile  README.md  RUNNING_LOCALLY.md  UX_IMPROVEMENT_PLAN.md  dojo-support-implementation-plan.md  example.env  get.starkverify.sh.html  install.sh  voyager-resolver.md
.cargo/: config.toml
.github/workflows/: ci.yaml  package.yml  release.yaml  release.yml  (+3 more)
crates/cli/: Cargo.toml  README.md
crates/cli/src/: api.rs  args.rs  build.rs  cli.rs  lib.rs  license.rs  resolver-cli.rs  resolver.rs  utils.rs  validation.rs  verify.rs
crates/resolver-cli/: Cargo.toml  README.md
crates/resolver-cli/src/: build.rs  cli.rs  resolver.rs  utils.rs
crates/voyager-resolver/: Cargo.toml
crates/voyager-resolver-cairo/: Cargo.toml
crates/voyager-resolver-cairo-1-1-0/: Cargo.toml
crates/voyager-resolver-cairo-1-1-0/src/: dyn_compiler.rs
crates/voyager-resolver-cairo-1-1-0/src/compiler/: mod.rs
crates/voyager-resolver-cairo-1-1-0/tests/test_data/project_w_import_from_attachment/: Scarb.toml
crates/voyager-resolver-cairo-1-1-0/tests/test_data/project_with_remap/src/contracts/: ERC20.cairo
crates/voyager-resolver-cairo-2-1-0/: Cargo.toml
crates/voyager-resolver-cairo-2-1-0/src/: dyn_compiler.rs
crates/voyager-resolver-cairo-2-1-0/src/compiler/: queries.rs  scarb_utils.rs
crates/voyager-resolver-cairo-2-1-0/src/model/: mod.rs
crates/voyager-resolver-cairo-2-1-0/tests/: integration_test.rs
crates/voyager-resolver-cairo-2-1-1/: Cargo.toml
crates/voyager-resolver-cairo-2-1-1/src/: dyn_compiler.rs
crates/voyager-resolver-cairo-2-1-1/src/compiler/: mod.rs
crates/voyager-resolver-cairo-2-1-1/tests/: integration_test.rs
crates/voyager-resolver-cairo-2-2-0/: Cargo.toml
crates/voyager-resolver-cairo-2-2-0/src/: dyn_compiler.rs  lib.rs
crates/voyager-resolver-cairo-2-2-0/src/compiler/: mod.rs  queries.rs  scarb_utils.rs
crates/voyager-resolver-cairo-2-2-0/src/graph/: mod.rs
crates/voyager-resolver-cairo-2-2-0/src/utils/: test_utils.rs
crates/voyager-resolver-cairo-2-2-0/tests/: integration_test.rs
crates/voyager-resolver-cairo-2-2-0/tests/test_data/project_w_import_from_attachment/src/: lib.cairo
crates/voyager-resolver-cairo-2-2-0/tests/test_data/project_w_import_from_attachment/src/contracts/: ERC20.cairo
crates/voyager-resolver-cairo-2-2-0/tests/test_data/project_with_remap/: Scarb.toml
crates/voyager-resolver-cairo-2-2-0/tests/test_data/project_with_remap/src/contracts/: ERC20.cairo
crates/voyager-resolver-cairo-2-2-0/tests/test_data/project_with_remap/src/tests/: test_erc20.cairo
crates/voyager-resolver-cairo-2-2-0/tests/test_data/simple_project/: Scarb.toml
crates/voyager-resolver-cairo-2-6-3/: Cargo.toml
crates/voyager-resolver-cairo-2-6-3/src/: dyn_compiler.rs
crates/voyager-resolver-cairo-2-6-3/src/compiler/: mod.rs  queries.rs  scarb_utils.rs
crates/voyager-resolver-cairo-2-6-3/src/model/: mod.rs
crates/voyager-resolver-cairo-2-6-3/tests/: integration_test.rs
crates/voyager-resolver-cairo-2-6-3/tests/test_data/project_w_import_from_attachment/: .gitignore
crates/voyager-resolver-cairo-2-6-3/tests/test_data/simple_project/: Scarb.toml
crates/voyager-resolver-cairo/src/: dyn_compiler.rs  lib.rs
crates/voyager-resolver-cairo/src/compiler/: mod.rs  queries.rs  scarb_utils.rs
crates/voyager-resolver-cairo/src/graph/: mod.rs
crates/voyager-resolver-cairo/src/model/: mod.rs
crates/voyager-resolver-cairo/src/utils/: mod.rs  test_utils.rs
crates/voyager-resolver-cairo/tests/: integration_test.rs
crates/voyager-resolver-cairo/tests/test_data/import_external_deps_with_workspace/: Scarb.toml
crates/voyager-resolver-cairo/tests/test_data/import_external_deps_with_workspace/src/: main.cairo
crates/voyager-resolver-cairo/tests/test_data/project_w_import_from_attachment/: Scarb.toml
crates/voyager-resolver-cairo/tests/test_data/project_w_incorrect_contract_path/: Scarb.toml
crates/voyager-resolver-cairo/tests/test_data/project_w_incorrect_contract_path/src/contracts/: ERC20.cairo
crates/voyager-resolver-cairo/tests/test_data/project_with_remap/: Scarb.toml
crates/voyager-resolver-cairo/tests/test_data/project_with_remap/src/: contracts.cairo
crates/voyager-resolver-cairo/tests/test_data/simple_project/: Scarb.toml
crates/voyager-resolver-cairo/tests/test_data/simple_project/src/contracts/: ERC20.cairo
crates/voyager-resolver-cairo/tests/test_data/simple_super_import/: Scarb.toml
crates/voyager-resolver-cairo/tests/test_data/simple_super_import/src/: contracts.cairo  lib.cairo  simple.cairo
crates/voyager-resolver-universal/: Cargo.toml
crates/voyager-resolver-universal/src/: dyn_compiler.rs  lib.rs
crates/voyager-resolver-universal/src/compiler/: mod.rs  scarb_utils.rs
crates/voyager-resolver-universal/src/model/: mod.rs
crates/voyager-resolver-universal/src/utils/: mod.rs
crates/voyager-resolver-universal/tests/: integration_test.rs
crates/voyager-resolver-universal/tests/test_data/simple_project/: Scarb.toml
crates/voyager-resolver/src/compiler/: mod.rs  queries.rs  scarb_utils.rs
crates/voyager-resolver/src/utils/: mod.rs
crates/voyager-resolver/tests/: integration_test.rs
crates/voyager-resolver/tests/test_data/dependency/src/: main.cairo
crates/voyager-resolver/tests/test_data/project_w_import_from_attachment/: Scarb.toml
crates/voyager-resolver/tests/test_data/project_w_import_from_attachment/src/contracts/: ERC20.cairo
crates/voyager-resolver/tests/test_data/project_with_remap/src/contracts/: ERC20.cairo
crates/voyager-resolver/tests/test_data/simple_project/src/: tests.cairo
crates/voyager-resolver/tests/test_data/simple_project/src/contracts/: ERC20.cairo
example/: contract_standalone.cairo
src/: api.rs  args.rs  class_hash.rs  errors.rs  fmt.rs  history.rs  lib.rs  license.rs  main.rs  progress.rs  project.rs  resolver.rs  voyager.rs
starkverifyup/: install  starkverifyup
tests/: error_message_tests.rs  integration_tests.rs
(+60 files in other folders)
