[package]
authors = ["Nethermind"]
description = "`Contract class verification tool that allows you to verify your starknet classes on a block explorer."
license = "Apache-2.0"
name = "starknet-contract-verifier"
repository = "https://github.com/NethermindEth/starknet-contract-verifier"
version = "1.0.0-rc.1"
default-run = "starknet-contract-verifier"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
backon = { version = "1.2.0", default-features = false, features = ["std-blocking-sleep"] }
camino = { version = "1.1.2", features = ["serde1"] }
clap = { version = "4.5.20", features = ["derive", "unicode", "env", "string"] }
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.20"
regex = "1"
reqwest = { version = "=0.11", features = ["blocking", "json", "multipart"] }
scarb-metadata = "1.13.0"
semver = "1.0.23"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.20"
spdx = "0.10.6"
thiserror = "2.0.6"
url = "2.2.2"
walkdir = "2.3.3"

[lib]
name = "verifier"

[[bin]]
name = "starknet-contract-verifier"
path = "src/main.rs"
