[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
comfy-table = "6.0.0"
serde.workspace = true
smol_str.workspace = true
thiserror.workspace = true
toml.workspace = true
reqwest = { version = "=0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.28.2", features = ["full"] }
url = "2.2.2"
dialoguer = { version = "0.10", features = ["fuzzy-select", "completion"] }
console = "0.15.8"
regex = "1"
indicatif = "0.17.7"
strum = "0.25.0"
strum_macros = "0.25.0"
dirs = "4.0"

dyn-compiler = { path = "../dyn-compiler" }

# All resolver versions, based on scarb + cairo
voyager-resolver-cairo = { path = "../voyager-resolver-cairo" }
walkdir = "2.3.3"

[[bin]]
name = "starknet-contract-verifier"
path = "src/cli.rs"

[[bin]]
name = "starknet-contract-resolver"
path = "src/resolver-cli.rs"
