[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
camino.workspace = true
itertools.workspace = true
scarb-metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { version = "=0.11", features = ["blocking", "json", "multipart"] }
url = "2.2.2"
regex = "1"
walkdir = "2.3.3"
clap = { version = "4.5.20", features = ["derive", "unicode", "env", "string"] }
backon = { version = "1.2.0", default-features = false, features = ["std-blocking-sleep"] }
spdx = "0.10.6"
semver = "1.0.23"

[[bin]]
name = "starknet-contract-verifier"
path = "src/cli.rs"
