[package]
name = "resolver-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
comfy-table = "6.0.0"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
regex = "1"

serde.workspace = true
smol_str.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { version = "1.28.2", features = ["full"] }
toml.workspace = true
url = "2.2.2"
strum = "0.25.0"

dyn-compiler = { path = "../dyn-compiler" }

# All resolver versions, based on scarb + cairo
voyager-resolver-cairo-1-1-0 = { path = "../voyager-resolver-cairo-1-1-0" }
voyager-resolver-cairo-1-1-1 = { path = "../voyager-resolver-cairo-1-1-1" }
voyager-resolver-cairo-2-0-0 = { path = "../voyager-resolver-cairo-2-0-0" }
voyager-resolver-cairo-2-0-1 = { path = "../voyager-resolver-cairo-2-0-1" }
voyager-resolver-cairo-2-0-2 = { path = "../voyager-resolver-cairo-2-0-2" }

[[bin]]
name = "voyager-resolver"
path = "src/cli.rs"
