[package]
name = "resolver-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
comfy-table = "6.0.0"
serde.workspace = true
smol_str.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio = { version = "1.28.2", features = ["full"] }
toml.workspace = true
url = "2.2.2"
scarb-metadata.workspace = true
semver = "1.0.18"

dyn-compiler = { path = "../dyn-compiler" }

# All resolver versions, based on scarb + cairo
voyager-resolver-cairo-2-6-3 = { path = "../voyager-resolver-cairo-2-6-3" }
log = "0.4.21"
env_logger.workspace = true

[[bin]]
name = "voyager-resolver"
path = "src/cli.rs"
