[package]
name = "voyager-resolver-cairo-2-2-0"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
starknet.workspace = true
indoc.workspace = true
itertools.workspace = true
salsa = "0.16.1"
scarb-metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tracing = "0.1.37"
regex = "1.7.1"
petgraph = "0.5.0"
toml.workspace = true
toml_edit = "0.19.8"
rstest = "0.17.0"
camino.workspace = true
dyn-compiler = { path = "../dyn-compiler" }

# All version dependent dependencies
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-language-server = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
scarb = { git = "https://github.com/hypekn1ght/scarb", rev = "d9e5d55" }
scarb-ui = { git = "https://github.com/hypekn1ght/scarb", rev = "d9e5d55" }

[dev-dependencies]
env_logger.workspace = true
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "ad5570f" }
pretty_assertions.workspace = true
test-case = "2.2.2"
test-case-macros = "2.2.2"
test-log.workspace = true
