[package]
name = "voyager-resolver-cairo-2-6-3"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
starknet.workspace = true
indoc.workspace = true
itertools.workspace = true
salsa = "0.16.1"
scarb-metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tracing = "0.1.37"
regex = "1.7.1"
petgraph = "0.5.0"
toml.workspace = true
toml_edit = "0.19.8"
rstest = "0.17.0"
camino.workspace = true
dyn-compiler = { path = "../dyn-compiler" }

# All version dependent dependencies
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" } # patch for upcoming cairo/scarb release
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "c064d5e789d5bf194691eca9bd0f3b508caf83fc" }

scarb = { git = "https://github.com/software-mansion/scarb", rev = "dac9a59" } # Waiting for >2.6.4 to support rust >1.77
scarb-ui = { git = "https://github.com/software-mansion/scarb", rev = "dac9a59" } # Waiting for >2.6.4 to support rust >1.77
# scarb-ui = { git = "https://github.com/software-mansion/scarb", version = "0.1.2", rev = "5dbab1f" }

[dev-dependencies]
env_logger.workspace = true
# cairo-lang-formatter = "=2.6.3"
# cairo-lang-semantic = "=2.6.3"
# cairo-lang-test-utils = "=2.6.3"
pretty_assertions.workspace = true
test-case = "2.2.2"
test-case-macros = "2.2.2"
test-log.workspace = true
