[package]
name = "voyager-resolver-cairo"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
starknet.workspace = true
indoc.workspace = true
itertools.workspace = true
salsa = "0.16.1"
scarb-metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tracing = "0.1.37"
regex = "1.7.1"
petgraph = "0.5.0"
toml.workspace = true
toml_edit = "0.19.8"
rstest = "0.17.0"
camino.workspace = true
dyn-compiler = { path = "../dyn-compiler" }

# All version dependent dependencies
cairo-lang-casm = "=2.5.2"
cairo-lang-compiler = "=2.5.2"
cairo-lang-debug = "=2.5.2"
cairo-lang-defs = "=2.5.2"
cairo-lang-diagnostics = "=2.5.2"
cairo-lang-filesystem = "=2.5.2"
cairo-lang-language-server = "=2.5.2"
cairo-lang-lowering = "=2.5.2"
cairo-lang-parser = "=2.5.2"
cairo-lang-plugins = "=2.5.2"
cairo-lang-project = "=2.5.2"
cairo-lang-semantic = "=2.5.2"
cairo-lang-sierra-generator = "=2.5.2"
cairo-lang-starknet = "=2.5.2"
cairo-lang-syntax = "=2.5.2"
cairo-lang-utils = "=2.5.2"
scarb = { git = "https://github.com/software-mansion/scarb", version = "2.5.2", rev = "4fcd40d" }
scarb-ui = { git = "https://github.com/software-mansion/scarb", version = "0.1.3", rev = "4fcd40d" }

[dev-dependencies]
env_logger.workspace = true
cairo-lang-formatter = "=2.5.2"
cairo-lang-semantic = "=2.5.2"
cairo-lang-test-utils = "=2.5.2"
pretty_assertions.workspace = true
test-case = "2.2.2"
test-case-macros = "2.2.2"
test-log.workspace = true
