[package]
name = "voyager-resolver"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", rev = "439da05a031c2eda263c4ce12d0b71d20f38205f" }
cairo-lang-sierra-generator.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-utils.workspace = true
starknet.workspace = true
indoc.workspace = true
itertools.workspace = true
salsa = "0.16.1"
scarb.workspace = true
scarb-metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
tracing = "0.1.37"
regex = "1.7.1"
petgraph = "0.5.0"
toml.workspace = true
toml_edit = "0.19.8"
rstest = "0.17.0"
camino.workspace = true

[dev-dependencies]
env_logger.workspace = true
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo.git", rev = "439da05a031c2eda263c4ce12d0b71d20f38205f" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", rev = "439da05a031c2eda263c4ce12d0b71d20f38205f", features = [
    "testing",
] }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "439da05a031c2eda263c4ce12d0b71d20f38205f" }
pretty_assertions.workspace = true
test-case = "2.2.2"
test-case-macros = "2.2.2"
test-log.workspace = true
